Interface MultisetBuilder added Interface Builder improved